--- a/index.html
+++ b/index.html
@@ -16,27 +16,29 @@
 </head>
 
 <body>
-    <header>
-        <p>+</p>
-    </header>
+    <section>
 
-    <main>
-        <div>
-            <h2>2.</h2>
-        </div>
+        <header>
+            <p>+</p>
+        </header>
 
-        <h1>RANDOM</h1>
-        <h3>STYLE</h3>
-    </main>
-    <footer>
-        <ul>
-            <li><a href="twitter"><i class="lab la-twitter"></i></a></li>
-            <li><a href="behance"><i class="lab la-behance"></i></a></li>
-            <li><a href="facebook"><i class="lab la-facebook-f"></i></a></li>
-            <li><a href="vimeo"><i class="lab la-vimeo"></i></a></li>
-        </ul>
-    </footer>
+        <main>
+            <div class="circle">
+                <h2>&nbsp;2.</h2>
+            </div>
+            <h1> RANDOM </h1>
+            <h3>STYLE</h3>
+        </main>
+        <footer>
+            <ul>
+                <li><a href="twitter"><i class="lab la-twitter"></i></a></li>
+                <li><a href="behance"><i class="lab la-behance"></i></a></li>
+                <li><a href="facebook"><i class="lab la-facebook-f"></i></a></li>
+                <li><a href="vimeo"><i class="lab la-vimeo"></i></a></li>
+            </ul>
+        </footer>
 
+    </section>
 </body>
 
 </html>
